etc/iptables/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

#-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --set
#-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --update --seconds 60 --hitcount 4 -j DROP
#-A INPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT
#-A INPUT -p icmp -j ACCEPT

-A OUTPUT -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp --dport 80 -j ACCEPT
-A OUTPUT -p udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT

:logdrop - [0:0]
-A logdrop -m limit --limit 5/m --limit-burst 10 -j LOG
-A logdrop -j DROP

-A OUTPUT -j logdrop

COMMIT
